[workspace]
resolver = "3"
members = [ "rgkl", "cluster_agent" , "types"]

[profile.dev]
incremental = true
debug = true
opt-level = 1

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
