[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]

thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.13.0", features = ["gzip"] }
tonic-health = "0.13.0"
tonic-reflection = "0.13.0"
tracing = "0.1.41"
tracing-opentelemetry = { version = "0.28.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "std"] }
warp = "0.3.7"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["logs"] }
opentelemetry-appender-tracing = "0.30.0"
opentelemetry-resource-detectors = "0.9.0"

anyhow = "1.0.98"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
either = "1.13.0"
eyre = "0.6.12"


