[package]
name = "cluster_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rgkl = { path = "../rgkl" }
types = {path="../types/"}

prost = { workspace = true}
prost-types = { workspace = true}

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }

tonic = { workspace = true, features = ["gzip", "tls-ring"] }
tonic-health = { workspace = true}
tonic-reflection = { workspace = true}

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, features = ["metrics"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry", "std", "json"] }
tracing-test = { workspace = true }

notify = { workspace = true}
notify-debouncer-full = "0.6.0"

chrono = { workspace = true}
tempfile = { workspace = true }
thiserror = { workspace = true }

opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["logs"] }
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-resource-detectors = "0.9.0"


anyhow = "1.0.98"
colored = "3.0.0"
either = "1.15.0"

kube = { version = "1.1.0" }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
regex = "1.11.1"
clap = { version = "4.5.45", features = ["cargo"] }
config = "0.15.14"
serde = "1.0"

[dev-dependencies]
serial_test = "3.2.0"

