[package]
name = "cluster_agent"
version = "0.0.0"
edition = "2024"

[dependencies]
rgkl = { path = "../rgkl" }
types = {path="../types/"}

prost = { workspace = true}
prost-types = { workspace = true}

tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }

tonic = { workspace = true, features = ["gzip", "tls-ring"] }
tonic-health = { workspace = true}
tonic-reflection = { workspace = true}

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry", "std", "json"] }
tracing-test = { workspace = true }

notify = { workspace = true}
notify-debouncer-full = "0.6.0"

chrono = { workspace = true}
tempfile = { workspace = true }
thiserror = { workspace = true }

anyhow = "1.0.98"
colored = "3.0.0"
either = "1.15.0"

kube = { version = "1.1.0" }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
regex = "1.11.1"
clap = { version = "4.5.45", features = ["cargo"] }
config = "0.15.14"
serde = "1.0"
subst = "0.3.8"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
secrecy = "0.10"

[dev-dependencies]
serial_test = "3.2.0"
http  = "1.3.1"

