[package]
name = "types"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lints]
workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
